--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="center-image">
         <br><br>
-        <img class="center_image" src="img/ischool.png">
+        <img class="center_image" alt="iSchool image" src="img/ischool.png">
         <h3 class="center-image-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
             Unde corporis quos neque nisi impedit qui eveniet fuga distinctio <br>
             laudantium ipsum reiciendis quisquam ipsam voluptate dolore exercitationem,<br>
@@ -78,7 +78,8 @@
             </tr>
         </table>
     </div>
-    <div class="contact">
+    <div id="contact">
+        <p>contact section</p>
     </div>
     
 
