--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
         <table>
             <tr>
                 <td>
-                    <a href="project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
                 <td>
-                    <a href="project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
                 <td>
-                    <a href="project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
             </tr>
         </table>
@@ -62,18 +62,18 @@
         <table>
             <tr>
                 <td>
-                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
                 <td>
-                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
                 <td>
-                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg"></a>
+                    <a href="personal_project.html" target="blank"><img src="img/project_image.jpeg" alt="project image"></a>
                 </td>
             </tr>
         </table>
