--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="your name">
+    <meta name="author" content="GieMyung">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="description of your page">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
