--- a/project.html
+++ b/project.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="your name">
+    <meta name="author" content="GieMyung">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="description of your page">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Project 1 Draft - GieMyung Portfolio Project page</title>
 </head>
