--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="grid-container-index">
                     <div class="grid-item">
-                        <img class="index_img" src="../img/portrait.jpg" alt="">
+                        <img class="index_img" src="img/portrait.jpg" alt="">
                     </div>
                     <div class="gird-item"></div>
                     <div class="grid-item">
@@ -181,7 +181,7 @@
 
                 <div class="grid-container">
                     <div class="grid-item">
-                        <img id="UX" class="img-responsive" src="../img/research.png" alt="">
+                        <img id="UX" class="img-responsive" src="img/research.png" alt="">
                     </div>
                     <div class="grid-item">
                         <h3 class="grid-text">Employee engagement and Work from Home relationship research <br><br>
@@ -191,7 +191,7 @@
             
                 <div class="grid-container">
                     <div class="grid-item">
-                        <img class="grid-item-img" src="../img/UX_project.png" alt="" >
+                        <img class="grid-item-img" src="img/UX_project.png" alt="" >
                     </div>
                     <div class="grid-item">
                         <h3 class="grid-text">Accessibility project designed to open doors for Low-Visioners<br><br>  
