--- a/project.html
+++ b/project.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div id="IA" class="grid-container-index">
                 <div class="grid-item">                        
-                    <img class="ia_img grid-image" src="../img/information_architect.png" alt="">
+                    <img class="ia_img grid-image" src="img/information_architect.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -69,7 +69,7 @@
         
             <div id="UX" class="grid-container-index">
                 <div class="grid-item">                        
-                    <img class="ux_img grid-image" src="../img/UX_project.png" alt="">
+                    <img class="ux_img grid-image" src="img/UX_project.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -82,7 +82,7 @@
         
             <div id="research" class="grid-container-index">
                 <div class="grid-item"> 
-                    <img class="research_img grid-imgage" src="../img/research.png" alt="">
+                    <img class="research_img grid-imgage" src="img/research.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -94,7 +94,7 @@
             </div>
             <div id="business" class="grid-container-index">
                 <div class="grid-item">                      
-                    <img class="business_img grid-image" src="../img/business_strategy.png" alt="">
+                    <img class="business_img grid-image" src="img/business_strategy.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
