--- a/project.html
+++ b/project.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div id="IA" class="grid-container-index">
                 <div class="grid-item">                        
-                    <img class="ia_img grid-image" src="img/information_architect.png" alt="">
+                    <img id="ia_img" class="grid-image" src="img/information_architect.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -69,7 +69,7 @@
         
             <div id="UX" class="grid-container-index">
                 <div class="grid-item">                        
-                    <img class="ux_img grid-image" src="img/UX_project.png" alt="">
+                    <img id = "ux_img" class="grid-image" src="img/UX_project.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -82,7 +82,7 @@
         
             <div id="research" class="grid-container-index">
                 <div class="grid-item"> 
-                    <img class="research_img grid-imgage" src="img/research.png" alt="">
+                    <img id ="research_img" class="grid-image" src="img/research.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -94,7 +94,7 @@
             </div>
             <div id="business" class="grid-container-index">
                 <div class="grid-item">                      
-                    <img class="business_img grid-image" src="img/business_strategy.png" alt="">
+                    <img id="business_img" class="grid-image" src="img/business_strategy.png" alt="">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -126,10 +126,7 @@
     <div id="myModal" class="modal" tabindex="-1">
         <div class="modal-dialog mw-100">
           <div class="modal-content">
-            <div class="modal-body text-center">
-                <iframe id="modalIframe" src="https://uwnetid-my.sharepoint.com/personal/gielee_uw_edu/_layouts/15/Doc.aspx?sourcedoc={b841e20d-b33f-40a8-87f1-07092f0d320e}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="100%" height="380" frameborder="0" sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-top-navigation"allowtransparency="true">
-
-                </iframe>
+            <div class="modal_main modal-body text-center">
             </div>
           </div>
         </div>
