--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>About GieMyung</title>
-    <link rel="icon" type="image/x-icon" href="../img/main_favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/main_favicon.png?">
 </head>
 <body>
     <nav>
@@ -65,7 +65,7 @@
                         <div class="gird-item"></div>
 
                         <div class="grid-item grid-text">
-                            <p>
+                            <p class="medium_p ">
                                 GieMyung was born and raised in South Korea.
                                 GieMyung came to the United States at age of 17 and graduated
                                 Indiana University Bloomington with Informatics degree.
@@ -83,7 +83,7 @@
                     </div>
                     <div class="gird-item"></div>
                     <div class="grid-item grid-text">
-                        <p>
+                        <p class="medium_p">
                             GieMyung's first major was not Informatics. He had a dream to become a successful businessman just like his father.
                             Wandering without feeling the joy of learning, GieMyung found his interest when he first took Python class.
                             He then changed his major to Informatics to learn deeper.
@@ -99,7 +99,7 @@
                     </div>
                     <div class="gird-item"></div>
                     <div class="grid-item grid-text">
-                        <p>
+                        <p class="medium_p">
                             GieMyung has gained experience as a front-end developer based on his
                             acadmemic knowledge and now he is building more professional knowledge at the University of Washington. His passion and curiosity are his greatest strengths. Especially, he has an interest in software.
                         </p>
