--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
 
   
     <title>Academic Projects</title>
-    <link rel="icon" type="image/x-icon" href="../img/main_favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/main_favicon.png?">
 </head>
 <body>
     <nav>
@@ -57,7 +57,7 @@
         <div class="container">
             <div id="IA" class="grid-container-index">
                 <div class="grid-item">                        
-                    <img id="ia_img" class="grid-image" src="img/information_architect.png" alt="">
+                    <img id="ia_img" class="grid-image" src="img/information_architect.png" alt="IA project image">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -69,7 +69,7 @@
         
             <div id="UX" class="grid-container-index">
                 <div class="grid-item">                        
-                    <img id = "ux_img" class="grid-image" src="img/UX_project.png" alt="">
+                    <img id = "ux_img" class="grid-image" src="img/UX_project.png" alt="UX project image">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -82,7 +82,7 @@
         
             <div id="research" class="grid-container-index">
                 <div class="grid-item"> 
-                    <img id ="research_img" class="grid-image" src="img/research.png" alt="">
+                    <img id ="research_img" class="grid-image" src="img/research.png" alt="Research Project Image ">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
@@ -94,7 +94,7 @@
             </div>
             <div id="business" class="grid-container-index">
                 <div class="grid-item">                      
-                    <img id="business_img" class="grid-image" src="img/business_strategy.png" alt="">
+                    <img id="business_img" class="grid-image" src="img/business_strategy.png" alt="Business Project Image">
                 </div>
                 <div class="grid-item"></div>
                 <div class="grid-item">
