--- a/about_me.html
+++ b/about_me.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="author" content="GieMyung">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="description of your page">
+    <meta name="description" content="GieMyung Lee's Story">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
@@ -95,7 +95,7 @@
                 
                 <div class="grid-container-about">
                     <div class="grid-item">                        
-                            <img class="about_img" src="img/UW_logo.png" alt="Indiana University Logo">
+                            <img class="about_img" src="img/UW_logo.png" alt="University of Washington Logo">
                     </div>
                     <div class="gird-item"></div>
                     <div class="grid-item grid-text">
@@ -113,7 +113,7 @@
     <footer>
         <div class="footer_wrap">
             <div class="footer_intro">
-                <h4 class="footer_intro_name">&copy; GieMyung Lee</h4>
+                <p class="small_p footer_intro_name">&copy; GieMyung Lee</p>
                 
             </div>
             <div class="footer_social">
