--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="author" content="GieMyung">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="description of your page">
+    <meta name="description" content="2021 UW academic projects">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -112,7 +112,7 @@
     <footer>
         <div class="footer_wrap">
             <div class="footer_intro">
-                <h4 class="footer_intro_name">&copy; GieMyung Lee</h4>
+                <p class="small_p footer_intro_name">&copy; GieMyung Lee</p>
                 
             </div>
             <div class="footer_social">
