--- a/project.html
+++ b/project.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-        <div class="container">
+        <div class="container" aria-label="Projects and descriptions">
             <div id="IA" class="grid-container-index">
                 <div class="grid-item">                        
                     <img id="ia_img" class="grid-image" src="img/information_architect.png" alt="IA project image">
