--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                 <div class="grid-container">
                     <div class="grid-item">
-                        <img id="UX" class="img-responsive" src="../img/research.png" alt="">
+                        <img id="research" class="img-responsive" src="../img/research.png" alt="Research Project">
                     </div>
                     <div class="grid-item">
                         <h3 class="grid-text">Employee engagement and Work from Home relationship research <br><br>
@@ -192,7 +192,7 @@
             
                 <div class="grid-container">
                     <div class="grid-item">
-                        <img class="grid-item-img" src="../img/UX_project.png" alt="" >
+                        <img class="grid-item-img" src="../img/UX_project.png" alt="Accessibility Project" >
                     </div>
                     <div class="grid-item">
                         <h3 class="grid-text">Accessibility project designed to open doors for Low-Visioners<br><br>  
