--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
 
   
     <title>Academic Projects</title>
-    <link rel="icon" type="image/x-icon" href="../img/main_favicon.png?">
+    <link rel="icon" type="image/x-icon" href="img/main_favicon.png?">
 </head>
 <body>
     <nav>
