--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <title>GieMyung's Website</title>
-    <link rel="icon" type="image/x-icon" href="../img/main_favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/main_favicon.png">
 </head>
 <body onresize = resizeFunction()>
         <nav>
@@ -89,7 +89,7 @@
             <div class="container">
                 <div class="grid-container-index" aria-label="Introduction Primary">
                     <div class="grid-item">
-                        <img class="index_img" src="../img/portrait.jpg" alt="">
+                        <img class="index_img" src="img/portrait.jpg" alt="">
                     </div>
                     <div class="gird-item"></div>
                     <div class="grid-item">
@@ -182,7 +182,7 @@
 
                 <div class="grid-container">
                     <div class="grid-item">
-                        <img id="research" class="img-responsive" src="../img/research.png" alt="Research Project">
+                        <img id="research" class="img-responsive" src="img/research.png" alt="Research Project">
                     </div>
                     <div class="grid-item">
                         <h3 class="grid-text">Employee engagement and Work from Home relationship research <br><br>
@@ -192,7 +192,7 @@
             
                 <div class="grid-container">
                     <div class="grid-item">
-                        <img class="grid-item-img" src="../img/UX_project.png" alt="Accessibility Project" >
+                        <img class="grid-item-img" src="img/UX_project.png" alt="Accessibility Project" >
                     </div>
                     <div class="grid-item">
                         <h3 class="grid-text">Accessibility project designed to open doors for Low-Visioners<br><br>  
