--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>About GieMyung</title>
-    <link rel="icon" type="image/x-icon" href="../img/main_favicon.png?">
+    <link rel="icon" type="image/x-icon" href="img/main_favicon.png?">
 </head>
 <body>
     <nav>
