--- a/about_me.html
+++ b/about_me.html
@@ -135,11 +135,10 @@
           <input type="text" placeholder="Enter Message" name="msg" required>
           <br>
       
-          <button type="submit" class="btn">Submit</button>
+          <button type="submit" class="btn" onclick="closeForm()">Submit</button>
           <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
       </div>
-
 
 
 
