--- a/project.html
+++ b/project.html
@@ -128,6 +128,9 @@
           <div class="modal-content">
             <div class="modal_main modal-body text-center">
             </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
           </div>
         </div>
     </div>
@@ -143,7 +146,7 @@
           <input type="text" placeholder="Enter Message" name="msg" required>
           <br>
       
-          <button type="submit" class="btn">Submit</button>
+          <button type="submit" class="btn" onclick="closeForm()">Submit</button>
           <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
       </div>
