--- a/about_me.html
+++ b/about_me.html
@@ -124,6 +124,10 @@
         </div>
     </footer>
 
+
+    <!-- contact pop up--> 
+
+    
     <div class="form-popup" id="myForm">
         <form action="/action_page.php" class="form-container">
           <h1>Contact</h1>
