--- a/project.html
+++ b/project.html
@@ -123,6 +123,8 @@
         </div>
     </footer> 
 
+    <!-- modal pop up--> 
+
     <div id="myModal" class="modal" tabindex="-1">
         <div class="modal-dialog mw-100">
           <div class="modal-content">
@@ -134,6 +136,8 @@
           </div>
         </div>
     </div>
+
+    <!-- contact pop up--> 
 
     <div class="form-popup" id="myForm">
         <form action="/action_page.php" class="form-container">
